--- a/backend/package.json
+++ b/backend/package.json
@@ -6,21 +6,35 @@
   "type": "module",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon --watch . --ext js,json server.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "clean": "node utils/cleanup.js",
+    "lint": "echo \"Linting not configured\" && exit 0"
   },
-  "keywords": ["image-analysis", "ai", "express", "api"],
+  "keywords": [
+    "image-analysis",
+    "ai",
+    "express",
+    "api",
+    "gemini"
+  ],
   "author": "Your Name",
   "license": "MIT",
   "dependencies": {
-    "@anthropic-ai/sdk": "^0.27.0",
+    "@google/generative-ai": "^0.21.0",
+    "axios": "^1.7.7",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "express-rate-limit": "^7.4.1",
+    "fs-extra": "^11.2.0",
     "helmet": "^8.0.0",
+    "mime-types": "^2.1.35",
     "morgan": "^1.10.0",
-    "multer": "^2.0.0-rc.4"
+    "multer": "^2.0.0-rc.4",
+    "sharp": "^0.33.5",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
