--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,13 +8,17 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "clean": "rm -rf dist"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
+    "axios": "^1.7.7",
+    "framer-motion": "^11.11.17",
+    "lucide-react": "^0.460.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "framer-motion": "^11.11.17",
-    "lucide-react": "^0.460.0"
+    "react-dropzone": "^14.2.9"
   },
   "devDependencies": {
     "@types/react": "^18.3.12",
