--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,18 +14,19 @@
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "axios": "^1.7.7",
-    "framer-motion": "^11.11.17",
+    "framer-motion": "^11.18.2",
     "lucide-react": "^0.460.0",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-dropzone": "^14.2.9"
+    "react-dropzone": "^14.3.8"
   },
   "devDependencies": {
+    "@eslint/js": "^9.15.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
     "autoprefixer": "^10.4.20",
-    "@eslint/js": "^9.15.0",
     "eslint": "^9.15.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
