--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,6 +44,19 @@
     "globals": "^15.12.0",
     "postcss": "^8.5.1",
     "tailwindcss": "^3.4.14",
-    "vite": "^5.4.10"
+    "vite": "^5.4.10",
+    //testing dependencies below
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/user-event": "^14.5.1",
+    "@vitest/ui": "^1.0.0",
+    "vitest": "^1.0.0",
+    "jsdom": "^23.0.0",
+    "cypress": "^13.6.0",
+    "axe-core": "^4.8.0",
+    "cypress-axe": "^1.5.0",
+    "msw": "^2.0.0"
   }
+
 }
+
