--- a/backend/package.json
+++ b/backend/package.json
@@ -9,13 +9,31 @@
     "dev": "nodemon --watch . --ext js,json --env-file .env server.js",
     "dev:debug": "nodemon --inspect --watch . --ext js,json --env-file .env server.js",
     "build": "echo \"No build step required for Node.js\" && exit 0",
-    "test": "echo \"Error: no test specified\" && exit 1",
     "test:env": "node test-env.js",
     "test:upload": "node test-upload.js",
     "clean": "node utils/cleanup.js",
     "lint": "echo \"Linting not configured\" && exit 0",
-    "health": "curl -f http://localhost:5000/health || exit 1"
+    "health": "curl -f http://localhost:5000/health || exit 1",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:unit": "jest tests/unit",
+    "test:integration": "jest tests/integration",
+    "test:security": "jest tests/security",
+    "test:load": "artillery run tests/load/load-test.yml",
+    "test:api": "newman run tests/api/image-analyzer.postman_collection.json"
   },
+  "jest": {
+    "testEnvironment": "node",
+    "coverageDirectory": "coverage",
+    "collectCoverageFrom": 
+    [
+      "**/*.js",
+      "!node_modules/**",
+      "!coverage/**",
+      "!tests/**"]
+    },
+
   "keywords": [
     "image-analysis",
     "ai",
@@ -42,7 +60,13 @@
     "uuid": "^10.0.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "jest": "^29.7.0",
+    "supertest": "^6.3.3",
+    "@types/jest": "^29.5.5",
+    "artillery": "^2.0.0",
+    "newman": "^6.0.0"
+
   },
   "engines": {
     "node": ">=18.0.0"
