--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,13 @@
     "clean": "rm -rf dist",
     "analyze": "vite build --mode production && npx vite-bundle-analyzer dist",
     "type-check": "tsc --noEmit",
-    "test": "echo \"No tests specified\" && exit 0"
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest --coverage",
+    "test:e2e": "cypress open",
+    "test:e2e:headless": "cypress run",
+    "test:component": "vitest run src/__tests__/components",
+    "test:integration": "vitest run src/__tests__/integration"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.0",
@@ -45,7 +51,7 @@
     "postcss": "^8.5.1",
     "tailwindcss": "^3.4.14",
     "vite": "^5.4.10",
-    //testing dependencies below
+    
     "@testing-library/react": "^14.0.0",
     "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/user-event": "^14.5.1",
