--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,16 +24,14 @@
     "test:component": "vitest run src/__tests__/components",
     "test:integration": "vitest run src/__tests__/integration"
   },
-
-  
-"engines": {
+  "engines": {
     "node": ">=20.0.0",
     "npm": ">=9.0.0"
   },
-  
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "axios": "^1.9.0",
+    "firebase": "12.0.0",
     "framer-motion": "^11.18.2",
     "lucide-react": "^0.460.0",
     "prop-types": "^15.8.1",
@@ -45,33 +43,29 @@
   "devDependencies": {
     "@eslint/js": "^9.15.0",
     "@fullhuman/postcss-purgecss": "^7.0.2",
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.5.1",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
+    "@vitest/ui": "^1.0.0",
     "autoprefixer": "^10.4.20",
+    "axe-core": "^4.8.0",
     "cssnano": "^7.0.7",
+    "cypress": "^13.6.0",
+    "cypress-axe": "^1.5.0",
     "eslint": "^9.15.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.12.0",
+    "jsdom": "^23.0.0",
+    "msw": "^2.0.0",
     "postcss": "^8.5.1",
     "tailwindcss": "^3.4.14",
-    "vite": "^5.4.10",
     "terser": "^5.36.0",
-
-    
-    "@testing-library/react": "^14.0.0",
-    "@testing-library/jest-dom": "^6.1.4",
-    "@testing-library/user-event": "^14.5.1",
-    "@vitest/ui": "^1.0.0",
-    "vitest": "^1.0.0",
-    "jsdom": "^23.0.0",
-    "cypress": "^13.6.0",
-    "axe-core": "^4.8.0",
-    "cypress-axe": "^1.5.0",
-    "msw": "^2.0.0"
+    "vite": "^5.4.10",
+    "vitest": "^1.0.0"
   }
-
 }
-
