--- a/backend/package.json
+++ b/backend/package.json
@@ -26,14 +26,13 @@
   "jest": {
     "testEnvironment": "node",
     "coverageDirectory": "coverage",
-    "collectCoverageFrom": 
-    [
+    "collectCoverageFrom": [
       "**/*.js",
       "!node_modules/**",
       "!coverage/**",
-      "!tests/**"]
-    },
-
+      "!tests/**"
+    ]
+  },
   "keywords": [
     "image-analysis",
     "ai",
@@ -51,6 +50,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "express-rate-limit": "^7.4.1",
+    "firebase-admin": "^13.4.0",
     "fs-extra": "^11.2.0",
     "helmet": "^8.0.0",
     "mime-types": "^2.1.35",
@@ -60,13 +60,12 @@
     "uuid": "^10.0.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.7",
-    "jest": "^29.7.0",
-    "supertest": "^6.3.3",
     "@types/jest": "^29.5.5",
     "artillery": "^2.0.0",
-    "newman": "^6.0.0"
-
+    "jest": "^29.7.0",
+    "newman": "^6.0.0",
+    "nodemon": "^3.1.7",
+    "supertest": "^6.3.3"
   },
   "engines": {
     "node": ">=18.0.0"
