--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,19 +2,23 @@
   "name": "image-analyzer-frontend",
   "private": true,
   "version": "1.0.0",
-  "description": "Frontend React application for AI-powered image analysis",
+  "description": "Frontend React application for AI-powered image analysis with optimized chunking",
   "type": "module",
   "scripts": {
     "dev": "vite --mode development",
     "dev:host": "vite --mode development --host",
+    "dev:analyze": "vite --mode development --analyze",
     "build": "vite build --mode production",
     "build:dev": "vite build --mode development",
+    "build:analyze": "vite build --mode production && npx vite-bundle-analyzer dist",
     "preview": "vite preview",
     "preview:host": "vite preview --host",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "lint:fix": "eslint . --ext js,jsx --fix",
     "clean": "rm -rf dist",
     "analyze": "vite build --mode production && npx vite-bundle-analyzer dist",
+    "analyze:deps": "npx depcheck",
+    "analyze:size": "npx bundlesize",
     "type-check": "tsc --noEmit",
     "test": "vitest",
     "test:ui": "vitest --ui",
@@ -22,7 +26,11 @@
     "test:e2e": "cypress open",
     "test:e2e:headless": "cypress run",
     "test:component": "vitest run src/__tests__/components",
-    "test:integration": "vitest run src/__tests__/integration"
+    "test:integration": "vitest run src/__tests__/integration",
+    "perf:lighthouse": "lhci autorun",
+    "perf:measure": "npm run build && node scripts/measure-bundle.js",
+    "optimize:images": "imagemin src/assets/images/**/* --out-dir=src/assets/images/optimized",
+    "preload:check": "node scripts/check-preload-hints.js"
   },
   "engines": {
     "node": ">=20.0.0",
@@ -30,13 +38,15 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.0",
+    "prop-types": "^15.8.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
+  },
+  "peerDependencies": {
     "axios": "^1.9.0",
     "firebase": "12.0.0",
     "framer-motion": "^11.18.2",
     "lucide-react": "^0.460.0",
-    "prop-types": "^15.8.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.8",
     "react-router-dom": "^6.28.0"
   },
@@ -52,20 +62,69 @@
     "@vitest/ui": "^1.0.0",
     "autoprefixer": "^10.4.20",
     "axe-core": "^4.8.0",
+    "bundlesize": "^0.18.1",
     "cssnano": "^7.0.7",
     "cypress": "^13.6.0",
     "cypress-axe": "^1.5.0",
+    "depcheck": "^1.4.3",
     "eslint": "^9.15.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.12.0",
+    "imagemin": "^8.0.1",
+    "imagemin-mozjpeg": "^10.0.0",
+    "imagemin-pngquant": "^9.0.2",
     "jsdom": "^23.0.0",
+    "lighthouse": "^11.4.0",
     "msw": "^2.0.0",
     "postcss": "^8.5.1",
     "tailwindcss": "^3.4.14",
     "terser": "^5.36.0",
     "vite": "^5.4.10",
-    "vitest": "^1.0.0"
-  }
+    "vite-bundle-analyzer": "^0.7.0",
+    "vitest": "^1.0.0",
+    "web-vitals": "^4.2.4"
+  },
+  "bundlesize": [
+    {
+      "path": "./dist/assets/js/index-*.js",
+      "maxSize": "200kb",
+      "compression": "gzip"
+    },
+    {
+      "path": "./dist/assets/js/react-core-*.js",
+      "maxSize": "150kb",
+      "compression": "gzip"
+    },
+    {
+      "path": "./dist/assets/js/motion-*-*.js",
+      "maxSize": "100kb",
+      "compression": "gzip"
+    },
+    {
+      "path": "./dist/assets/js/firebase-essential-*.js",
+      "maxSize": "80kb",
+      "compression": "gzip"
+    },
+    {
+      "path": "./dist/assets/js/http-client-*.js",
+      "maxSize": "50kb",
+      "compression": "gzip"
+    }
+  ],
+  "importmap": {
+    "imports": {
+      "axios": "./node_modules/axios/lib/axios.js",
+      "firebase/app": "./node_modules/firebase/app/dist/esm/index.esm.js",
+      "firebase/auth": "./node_modules/firebase/auth/dist/esm/index.esm.js",
+      "firebase/firestore": "./node_modules/firebase/firestore/dist/esm/index.esm.js",
+      "framer-motion": "./node_modules/framer-motion/dist/esm/index.mjs",
+      "react-router-dom": "./node_modules/react-router-dom/dist/index.js"
+    }
+  },
+  "sideEffects": [
+    "*.css",
+    "./src/index.css"
+  ]
 }
